--- a/APM-Luis/src/app/products/containers/product-shell/product-shell.component.html
+++ b/APM-Luis/src/app/products/containers/product-shell/product-shell.component.html
@@ -7,10 +7,17 @@
     [selectedProduct]="selectedProduct$ | async"
     (checked)="checkChanged($event)"
     (initializeNewProduct)="newProduct()"
-    (selected)="productSelected($event)"
-    ></pm-product-list>
+    (selected)="productSelected($event)">
+  </pm-product-list>
   </div>
   <div class='col-md-8'>
-    <pm-product-edit></pm-product-edit>
+    <pm-product-edit
+    [selectedProduct]="selectedProduct$ | async"
+	  [errorMessage]="errorMessage$ | async"
+    (clearCurrent)="clearProduct()"
+    (update)="updateProduct($event)"
+    (delete)="deleteProduct($event)"
+    (create)="saveProduct($event)">
+  </pm-product-edit>
   </div>
 </div>
